@@ -1,0 +1,7 @@
+Condition not satisfied:
+
+a ==~ b
+| |   |
+| |   null
+| false
+[1]
